--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
-    "eslint": "^8.19.0",
-    "eslint-config-htmlacademy": "^6.0.0"
+    "eslint": "8.19.0",
+    "eslint-config-htmlacademy": "6.0.0"
   },
   "engines": {
     "node": "16"
@@ -26,7 +26,7 @@
     "@babel/core": "7.18.6",
     "@babel/preset-env": "7.18.6",
     "babel-loader": "8.2.5",
-    "copy-webpack-plugin": "^10.2.4",
+    "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.7.1",
     "dayjs": "1.11.5",
     "flatpickr": "4.6.13",
